# go

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE
cmd/go/: BUILD.bazel  main.go
cmd/go/templates/: header.html  home.html
deployments/: docker-compose.yaml  run.sh
