load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "gitlab.com/EvyBongers/go/cmd/go",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gorilla_mux//:go_default_library"],
)

go_binary(
    name = "go",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_image(
    name = "go_container",
    entrypoint = ["/go"],
    files = [":go"],
    visibility = ["//visibility:public"],
)
